fix hamburger menu overlap with top navbar

--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -58,6 +58,7 @@ a:hover {
 
 .top-menu ul {
     margin-bottom: 0;
+    margin-left: 39px;
 }
 
 .top-menu ul li {
